# pyodc

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  Introduction.ipynb  MANIFEST.in  README.md  README.rst  codc.py  codyssey.py  odyssey.py  processed_odc.h  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: .ci-workflow.yml  ci-config.yml  ci-hpc-config.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  sync.yml
codc/: __init__.py  codc.py  constants.py  encoder.py  frame.py  lib.py  reader.py
docs/: conf.py  index.rst  requirements.txt
docs/content/: api.rst  development.rst  installation.rst  introduction.rst  licence.rst  usage.rst
docs/content/usage/: data-1.csv  data-2.csv  decoding-odb-2-data.ipynb  encoding-odb-2-data.ipynb  example-1.odb  example-2.odb  example-3.odb  example-4.odb  example-5.odb  example-6.odb  (+1 more)
odyssey/: __init__.py  codec.py  constants.py  encoder.py  frame.py  reader.py  stream.py
pyodc/: __init__.py  codec.py  constants.py  encoder.py  frame.py  reader.py  stream.py
pyodyssey/: __init__.py
src/codc/: __init__.py  constants.py  encoder.py  frame.py  lib.py  reader.py
src/pyodc/: __init__.py  codec.py  frame.py  reader.py
tests/: conftest.py  odb1_missing_string.odb  test_api.py  test_column_disambiguation.py  test_count.py  test_docs.py  test_end_to_end.py  test_initial_missing.py  test_integral_codecs.py  test_pyodc_codc_interop.py  test_setup.py  test_string_codecs.py
tests/data/: data1.odb  odb_533_1.odb  odb_533_2.odb
tools/: build_header.py
