[metadata]
name = pyodc
version = attr: codc.__version__
author = European Centre for Medium-Range Weather Forecasts (ECMWF)
author_email = software.support@ecmwf.int
description = A Python interface to odc for encoding/decoding ODB-2 files.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = Apache License Version 2.0
url = https://github.com/ecmwf/pyodc
keywords = odc odb
classifiers =
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: Implementation :: PyPy
        Operating System :: OS Independent

[options]
package_dir =
    = src
packages = pyodc, codc
python_requires = >=3.10
include_package_data = True
test_suite = tests
install_requires =
    cffi
    odclib==1.6.0
    eckitlib==1.28.5
    findlibs>=0.1.0
    pandas
    packaging




[options.package_data]
* = *.h

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-flakes
